# mcreweight

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  examples.rst  index.rst  methods.rst  requirements.txt
src/mcreweight/: __init__.py  config.py  core.py  io.py  optuna.py  train.py
src/mcreweight/models/: __init__.py  onnxfolding.py  onnxreweighter.py
src/mcreweight/scripts/: apply_weights.py  run_reweighting.py
src/mcreweight/utils/: __init__.py  default_xlabels.yaml  plotting_utils.py  utils.py
tests/: test_cli.py  test_imports.py  test_io.py
tests_run/: apply_weights_config.yaml  make_test_root_samples.py  run_reweighting_config.yaml  test_data.root  test_mc.root  throughput_config.yaml
